PortalPackage/ Enrollment Rx Core/objects/Student_Information__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Term_Start_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anticipated Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Student Information</relationshipLabel>
        <relationshipName>Student_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Information</relationshipLabel>
        <relationshipName>Student_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook_Email_Address__c</fullName>
        <label>Facebook Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <description>ERx Field</description>
        <label>Facebook ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Log__c</fullName>
        <description>Shows all activity from the Facebook app.</description>
        <inlineHelpText>Shows all activity from the Facebook app.</inlineHelpText>
        <label>Facebook Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_School_Code__c</fullName>
        <externalId>true</externalId>
        <label>High School Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Name__c</fullName>
        <formula>Contact__r.High_School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IM_Account_Name__c</fullName>
        <label>IM Account Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <label>Other City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Postal_Code__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State__c</fullName>
        <label>Other State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street__c</fullName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program of Interest</label>
        <referenceTo>Program_Offered__c</referenceTo>
        <relationshipLabel>Student Information</relationshipLabel>
        <relationshipName>Student_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIS_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SIS ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Last_Name__c+&apos;,  &apos;+First_Name__c</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Student Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>